# QShed-WebUI

./: .gitignore  README.md  config.py  config.yml  main.py  pyproject.toml
app/: __init__.py
app/blueprints/auth/: routes.py
app/blueprints/database/: routes.py
app/blueprints/main/: __init__.py  routes.py
app/blueprints/scheduler/: __init__.py  forms.py  routes.py
app/templates/: _base.html  index.html
app/templates/database/: database.html
app/templates/error/: 404.html  500.html
app/templates/scheduler/: list.html
logs/dev/: QShed.log.1  QShed.log.2  QShed.log.3
webui/: __init__.py
webui/app/: __init__.py  queries.py
webui/app/blueprints/auth/: forms.py  routes.py
webui/app/blueprints/database/: __init__.py  routes.py
webui/app/blueprints/main/: errors.py  routes.py
webui/app/blueprints/nosql/: __init__.py  routes.py
webui/app/blueprints/sql/: __init__.py  forms.py  routes.py
webui/app/blueprints/timeseries/: __init__.py  routes.py
webui/app/html/: common.py  sidebar.py  sql_entity.py  timeseries.py
webui/app/models/: common.py  user.py
webui/app/templates/: _base.html  common.html
webui/app/templates/database/: collection.html  list.html
webui/app/templates/error/: 403.html
webui/app/templates/nosql/: collection.html  database.html  list.html
webui/app/utils/: plotting.py
